--- a/index.html
+++ b/index.html
@@ -23,11 +23,17 @@
 	<!--Service-->
 	<div data-component="sections/service"></div>
 
-	<!-- experience -->
+	<!-- experience -->	
 	<div data-component="sections/experience"></div>
+	
+		<!-- Cursos -->
+		<div data-component="sections/curso"></div>
 
 	<!-- Portfolio -->
 	<div data-component="sections/portfolio"></div>
+
+	<!-- Reference -->
+	<div data-component="sections/reference"></div>
 
 	<!--Footer-->
 	<div data-component="footer"></div>
